# contextforge-mcp

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
contextforge-mcp-v2/contextforge-mcp/.github/workflows/: ci.yml
contextforge-mcp-v2/contextforge-mcp/extensions/speckit/commands/: cf-index.md  cf-stats.md
contextforge-mcp-v2/contextforge-mcp/src/contextforge_mcp/: server.py
contextforge-mcp-v2/contextforge-mcp/tests/: test_compressor.py  test_server.py  test_speckit.py
extensions/speckit/: extension.json  extension.yml
extensions/speckit/commands/: cf-analyze.md  cf-implement.md
extensions/speckit/templates/: CONTEXTFORGE.md
src/contextforge_mcp/: __init__.py  cbm_client.py  cli.py  compressor.py  server.py  speckit.py
tests/: test_cbm_client.py  test_compressor.py  test_server.py  test_speckit.py
