[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "contextforge-mcp"
version = "0.2.2"
description = "MCP orchestrator: codebase-memory-mcp + headroom + Spec Kit"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["mcp", "llm", "context", "compression", "code-intelligence", "spec-kit", "ai-agents"]
authors = [{ name = "Camilo Patiño", email = "capatinore@github.com" }]

dependencies = [
    "mcp>=1.0.0",
    "headroom-ai>=0.9.0",
    "httpx>=0.27.0",
    "anyio>=4.0.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
contextforge-mcp = "contextforge_mcp.cli:app"

[project.urls]
Repository = "https://github.com/capatinore/contextforge-mcp"

[tool.hatch.build.targets.wheel]
packages = ["src/contextforge_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
